--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,38 +1,23 @@
-<footer class="site-footer">
+<footer>
+  <nav class="navbar navbar-default">
+    <div class="container">
+      <div class="row vertical-align">
+        <div class="col-sm-4">
+          <!-- 1th collumn -->
 
-  <div class="wrapper">
+          <div class="media">
+            <div class="media-left media-middle">
+              <img class="media-object github" src="/assets/GitHub-Mark-64px.png"></img>
+            </div>
+            <div class="media-body media-middle">
+              <a href="http://github.io/gkos">github.io/gkos</a>
+            </div>
+          </div>
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
+        </div>
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4"></div>
       </div>
     </div>
-
-  </div>
-
+    </div>
 </footer>
