Fix github user link.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
               <img class="media-object github" src="/assets/GitHub-Mark-64px.png"></img>
             </div>
             <div class="media-body media-middle">
-              <a href="http://github.io/gkos">github.io/gkos</a>
+              <a href="https://github.com/gkos/">github.io/gkos</a>
             </div>
           </div>
 
