Make categories a dropdown menu.

--- a/css/main.sass
+++ b/css/main.sass
@@ -1,12 +1,15 @@
 ---
 ---
 
-footer img.github
-  display: block
-  max-width: 32px
-  height: auto
-  padding: 3px
 
-.row.vertical-align
-  display: flex
-  align-items: center
+$lightgray: #d3d3d3
+$media-small: 768px
+
+footer-col
+  display: inline-block
+  padding: 10px
+  background-image: none
+  background-color: green
+  border: 1px solid black
+
+// vim: set ts=2:sw=2:sts=2:et:
