--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,23 +1,30 @@
 <footer>
   <nav class="navbar navbar-default">
     <div class="container">
-      <div class="row vertical-align">
+      <div class="nav navbar-nav">
         <div class="col-sm-4">
-          <!-- 1th collumn -->
-
-          <div class="media">
-            <div class="media-left media-middle">
-              <img class="media-object github" src="/assets/GitHub-Mark-64px.png"></img>
-            </div>
-            <div class="media-body media-middle">
-              <a href="https://github.com/gkos/">github.io/gkos</a>
-            </div>
+          <div class="footer-col">
+            <p>
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+            </p>
           </div>
-
         </div>
-        <div class="col-sm-4"></div>
-        <div class="col-sm-4"></div>
+        <div class="col-sm-4">
+          <div class="footer-col">
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="footer-col">
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+          </div>
+        </div>
       </div>
     </div>
-    </div>
-</footer>
+    <div class="container">
+      <div class="row" style="text-align: center;">
+        <p sytle="margin: 0 auto; float: none;">Daniel Hilst Selli (c), 2016</p>
+      </div>
+    </nav>
+  </footer>
+  <!-- vim: set ts=2:sw=2:sts=2:et
