--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,11 +12,22 @@
       </div>
       <div class="collapse navbar-collapse" id="site-navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          {% for my_page in site.pages %}
-            {% if my_page.title %}
-              <li><a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
+            {% for my_page in site.pages %}
+              {% if my_page.title == 'Categories' %}
+              <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown">Categories <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  {% for cat in site.categories %}
+                  {% capture cat_name %}{{ cat | first }}{% endcapture %}
+                    <li><a href="categories/#{{ cat_name | slugize }}">{{ cat_name }}</a></li>
+                  {% endfor %}
+                </ul>
+              </li>
+            {% else %}
+            <li><a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
             {% endif %}
-          {% endfor %}
+            {% endfor %}
+        </ul>
       </div>
     </div>
   </nav>
