Add github page.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,21 +3,21 @@
     <div class="container">
       <div class="nav navbar-nav">
         <div class="col-sm-4">
-          <div class="footer-col">
-            <p>
-              Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-            </p>
+          <div class="center-block">
+            <div class="media">
+              <div class="media-left media-middle">
+                <img src="{{ site.url }}/assets/GitHub-Mark-64px.png" class="media-object" height=32></img>
+              </div>
+              <div class="media-body media-middle">
+                <a class="media-middle" href="http://github.com/gkos">github.com/gkos</a>
+              </div>
+            </div>
           </div>
+
         </div>
         <div class="col-sm-4">
-          <div class="footer-col">
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-          </div>
         </div>
         <div class="col-sm-4">
-          <div class="footer-col">
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-          </div>
         </div>
       </div>
     </div>
@@ -25,6 +25,7 @@
       <div class="row" style="text-align: center;">
         <p sytle="margin: 0 auto; float: none;">Daniel Hilst Selli (c), 2016</p>
       </div>
-    </nav>
-  </footer>
+    </div>
+  </nav>
+</footer>
   <!-- vim: set ts=2:sw=2:sts=2:et
