--- a/css/main.sass
+++ b/css/main.sass
@@ -1,15 +1,10 @@
 ---
 ---
 
-
-$lightgray: #d3d3d3
-$media-small: 768px
-
-footer-col
-  display: inline-block
-  padding: 10px
-  background-image: none
-  background-color: green
-  border: 1px solid black
+footer [class*=col-]
+  margin: 6px
+  min-height: 100%
+  display: flex
+  items-align: center 
 
 // vim: set ts=2:sw=2:sts=2:et:
