--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,9 @@
   {% include head.html %}
   <body>
       {% include header.html %}
-      <div class="container site-content">
-        {{ content }}
-      </div>
+        <div class="container">
+          {{ content }}
+        </div>
       {% include footer.html %}
   </body>
 </html>
