--- a/css/main.sass
+++ b/css/main.sass
@@ -1,6 +1,16 @@
 ---
 ---
 
+$background-image-heigth: 300px
+
+.site-header
+  background-image: url(../assets/header.jpg)
+  background-size: cover
+  background-position: right bottom
+  width: 100%
+  min-height: $background-image-heigth
+
+
 footer [class*=col-]
   margin: 6px
   min-height: 100%
