Use absolute path for background image at main.sass.

--- a/css/main.sass
+++ b/css/main.sass
@@ -4,7 +4,7 @@
 $background-image-heigth: 300px
 
 .site-header
-  background-image: url(../assets/header.jpg)
+  background-image: url(http://gkos.github.com/assets/header.jpg)
   background-size: cover
   background-position: right bottom
   width: 100%
