--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,30 +1,28 @@
 <footer>
-  <nav class="navbar navbar-default">
-    <div class="container">
-      <div class="nav navbar-nav">
-        <div class="col-sm-4">
-          <div class="center-block">
-            <div class="media">
-              <div class="media-left media-middle">
-                <img src="{{ site.url }}/assets/GitHub-Mark-64px.png" class="media-object" height=32></img>
-              </div>
-              <div class="media-body media-middle">
-                <a class="media-middle" href="http://github.com/gkos">github.com/gkos</a>
-              </div>
+  <div class="container">
+    <div class="row">
+
+      <div class="col-sm-3">
+
+        <div class="center-block">
+          <div class="media">
+            <div class="media-left media-middle">
+              <img src="{{ site.url }}/assets/GitHub-Mark-64px.png" class="media-object" height=32></img>
+            </div>
+            <div class="media-body media-middle">
+              <a class="media-middle" href="http://github.com/gkos">github.com/gkos</a>
             </div>
           </div>
+        </div>
 
-        </div>
-        <div class="col-sm-4">
-        </div>
-        <div class="col-sm-4">
+      </div>
+
+      <div class="col-sm-3 footer-column-right">
+        <div class="copyright">
+          <p>Daniel Hilst Selli (c), 2016</p>
         </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="row" style="text-align: center;">
-        <p sytle="margin: 0 auto; float: none;">Daniel Hilst Selli (c), 2016</p>
-      </div>
-    </div>
-  </nav>
+
+    </div> <!-- class="row" -->
+  </div> <!-- class="container" -->
 </footer>
