--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,33 +1,5 @@
-<header>
-  <div class="site-header"><h1>Hilst random thoughts ...</h1></div>
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#site-navbar-collapse" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="{{ site.url }}">Home</a>
-    </div>
-    <div class="collapse navbar-collapse" id="site-navbar-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        {% for my_page in site.pages %}
-        {% if my_page.title == 'Categories' %}
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown">Categories <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            {% for cat in site.categories %}
-            {% capture cat_name %}{{ cat | first }}{% endcapture %}
-            <li><a href="{{ site.url }}/categories/#{{ cat_name | slugize }}">{{ cat_name }}</a></li>
-            {% endfor %}
-          </ul>
-        </li>
-        {% else %}
-        <li><a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
-        {% endif %}
-        {% endfor %}
-      </ul>
-    </div>
-  </nav>
-</header>
+<div class="container site-header">
+  <h1>Gecko</h1>
+  <small>A web programming blog ...</small>
+</div>
+<hr/>
