--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,7 @@
 <div class="container site-header">
-  <h1>Gecko</h1>
-  <small>A web programming blog ...</small>
+  <a href='/'>
+    <h1>D. Hilst</h1>
+    <small>A blog about web, programming and life ...</small>
+  </a>
 </div>
 <hr/>
