--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,24 +2,20 @@
   <div class="container">
     <div class="row">
 
-      <div class="col-sm-3">
-
-        <div class="center-block">
-          <div class="media">
-            <div class="media-left media-middle">
-              <img src="{{ site.url }}/assets/GitHub-Mark-64px.png" class="media-object" height=32></img>
-            </div>
-            <div class="media-body media-middle">
-              <a class="media-middle" href="http://github.com/gkos">github.com/gkos</a>
-            </div>
+      <div class="col-md-3">
+        <div class="media">
+          <div class="media-left media-middle">
+            <img src="{{ site.url }}/assets/GitHub-Mark-64px.png" class="media-object" height=32></img>
+          </div>
+          <div class="media-body media-middle">
+            <a class="media-middle" href="http://github.com/gkos">github.com/gkos</a>
           </div>
         </div>
-
       </div>
 
-      <div class="col-sm-3 footer-column-right">
+      <div class="col-md-3">
         <div class="copyright">
-          <p>Daniel Hilst Selli (c), 2016</p>
+          <p>Daniel Hilst Selli <span class="glyphicon glyphicon-copyright-mark"></span> 2016</p>
         </div>
       </div>
 
