--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class="container site-header">
-  <a href='/'>
+  <a class="clean-link" href='/'>
     <h1>D. Hilst</h1>
     <small>A blog about web, programming and life ...</small>
   </a>
