--- a/css/main.sass
+++ b/css/main.sass
@@ -58,6 +58,7 @@ footer div[class*="col-"]
    
 .post-title
   margin-bottom: 0
+  margin-top: 0
 
 h1.post-title
   font-weight: 500
@@ -78,5 +79,11 @@ h1.post-title
 
 p.post-meta
   display: inline-block
+
+.post-blogspot
+  font-family: serif
+  font-style: italic
+  margin-bottom: 0
+
 
 // vim: set ts=2:sw=2:sts=2:et:
