--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
             <img src="{{ site.url }}/assets/GitHub-Mark-64px.png" class="media-object" height=32></img>
           </div>
           <div class="media-body media-middle">
-            <a class="media-middle" href="http://github.com/gkos">github.com/gkos</a>
+            <a class="media-middle" href="http://github.com/dhilst">github.com/dhilst</a>
           </div>
         </div>
       </div>
