--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,11 +18,11 @@ layout: default
 	</div>
   <div class='text-center'>
     <ul class='pagination'>
-      {% if page.previous.url %}
-      <li><a href="{{ page.previous.url }}" class="previous">&laquo;</a></li>
-      {% endif %}
       {% if page.next.url %}
-      <li><a href="{{ page.next.url }}" class="next">&raquo;</a></li>
+      <li><a href="{{ page.next.url }}" class="next">&laquo;</a></li>
+      {% endif %}
+      {% if page.previous.url %}
+      <li><a href="{{ page.previous.url }}" class="previous">&raquo;</a></li>
       {% endif %}
     </ul>
   </div>
