Add searchbar to index.html.

--- a/css/main.sass
+++ b/css/main.sass
@@ -85,5 +85,10 @@ p.post-meta
   font-style: italic
   margin-bottom: 0
 
+a.btn
+  &:hover, &:link, &:visited, &:active
+    text-decoration: none
+    color: inherit
+
 
 // vim: set ts=2:sw=2:sts=2:et:
