--- a/css/main.sass
+++ b/css/main.sass
@@ -85,10 +85,15 @@ p.post-meta
   font-style: italic
   margin-bottom: 0
 
-a.btn
+a.btn, a.search-result
   &:hover, &:link, &:visited, &:active
     text-decoration: none
     color: inherit
 
+#search-bar
+  margin-top: 20px
+
+ul.search-result-list
+  list-style: none
 
 // vim: set ts=2:sw=2:sts=2:et:
