Improve searchbar.js::store

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div id="search-results" class="post-tags">
-      <ul></ul>
+      <ul class="search-result-list"></ul>
     </div>
   </div>
 </div>
