--- a/css/main.sass
+++ b/css/main.sass
@@ -60,8 +60,8 @@ footer div[class*="col-"]
   margin-bottom: 0
   margin-top: 0
 
-h1.post-title
-  font-weight: 500
+h1.post-title, h2.post-title
+  font-weight: bold 
 
 .post-meta, .post-tags
   font-family: serif
@@ -95,5 +95,19 @@ a.btn, a.search-result
 
 ul.search-result-list
   list-style: none
+
+$title-size: 30px
+
+div[itemprop=articleBody] // post 
+  ul
+    margin-left: 15px
+  h1
+    font-size: $title-size
+  h2
+    font-size: calc(#{$title-size} * 0.9)
+  h3
+    font-size: calc(#{$title-size} * 0.8)
+  h1,h2,h3
+    font-weight: bold
 
 // vim: set ts=2:sw=2:sts=2:et:
